<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ピクチャブックオブポケモンPRO</string>
    <string name="name_serch">名前検索</string>
    <string name="waza_serch">技名検索</string>
    <string name="ability_serch">特性検索</string>
    <string name="type_serch">タイプ検索</string>
    <string name="egg_serch">タマゴ検索</string>
    <string name="syuzokuti_serch">種族値検索</string>
    
    <string name="murebuttle_hyou">群れバトル表</string>
    <string name="seikaku_hyou">性格表</string>
    
    <string name="status_hamntei">ステータス判定</string>
    <string name="kotaiti_hantei">個体値判定</string>
    <string name="speed_tyousei">スピード調整</string>
    
    <string name="ikusei_memo">育成メモ</string>
    
    <string name="item_serch">アイテム検索</string>
    
     <string name="title_section1">ステータス</string>
    <string name="title_section2">レベル技</string>
    <string name="title_section3">技マシン</string>
    <string name="title_section4">遺伝技</string>
    <string name="title_section5">教え技</string>
   
    
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

   <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    </resources>
