<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/name_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/name_serch"/>
    <item
        android:id="@+id/waza_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/waza_serch"/>
    <item
        android:id="@+id/ability_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ability_serch"/>
    <item
        android:id="@+id/type_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/type_serch"/>
    <item
        android:id="@+id/egg_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/egg_serch"/>
    <item
        android:id="@+id/syuzokuti_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/syuzokuti_serch"/>
    <item
        android:id="@+id/murebuttle_hyou"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/murebuttle_hyou"/>
    <item
        android:id="@+id/seikaku_hyou"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/seikaku_hyou"/>
    <item
        android:id="@+id/status_hamntei"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/status_hamntei"/>
    <item
        android:id="@+id/kotaiti_hantei"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/kotaiti_hantei"/>
    <item
        android:id="@+id/speed_tyousei"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/speed_tyousei"/>
    <item
        android:id="@+id/ikusei_memo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/ikusei_memo"/>
    <item
        android:id="@+id/item_serch"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/item_serch"/>
    
    <item
        android:id="@+id/action_example"
        android:showAsAction="withText|ifRoom"
        android:title="@string/action_example"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>